<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="450dp">

        <ImageView
            android:id="@+id/auth_logo"
            android:layout_width="220dp"
            android:layout_height="93dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_full_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.PartFinder.H5Header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_email_input"
            style="@style/PartFinder.InputLayout"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:hint="Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconDrawable="@drawable/ic_baseline_email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auth_password_input"
            style="@style/PartFinder.InputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="Пароль"
            app:endIconDrawable="@drawable/ic_hide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_email_input"
            app:startIconDrawable="@drawable/ic_password_input"
            tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:text="Запомнить меня"
            android:textAppearance="@style/TextAppearance.PartFinder.Body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_password_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/auth_button_sign_in"
            style="@style/ButtonPrimaryColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:text="@string/button_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_button_forgot_password"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_button_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_button_sign_in" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Войти через"
            android:textAppearance="@style/TextAppearance.PartFinder.Body"
            android:textColor="?attr/bodyHintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_button_forgot_password" />

        <View
            android:id="@+id/separator_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <View
            android:id="@+id/separator_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <ImageButton
            android:background="@drawable/outlined_rounded_button"
            android:src="@drawable/ic_facebook"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:id="@+id/imageButton2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageButton
            android:padding="16dp"
            android:background="@drawable/outlined_rounded_button"
            android:src="@drawable/ic_phone"
            android:scaleType="fitCenter"
            android:id="@+id/imageButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2" />

        <ImageButton
            android:src="@drawable/ic_google"
            android:background="@drawable/outlined_rounded_button"
            android:scaleType="fitCenter"
            android:padding="16dp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageButton2" />

        <include android:id="@+id/hint_register_block" layout="@layout/text_button_register_block"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>