...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_statement2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacy_policy_button_accept"
        style="@style/ButtonPrimaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/accept"
...
